add resize example for text-area

--- a/panel/text-area-preview.tmpl
+++ b/panel/text-area-preview.tmpl
@@ -39,6 +39,25 @@
 </div>
 
 <div class="section">
+  <h3>Resize</h3>
+  <div style="position: relative;">
+    <div class="group">
+      <ui-text-area resize-v placeholder="resize-v"></ui-text-area>
+    </div>
+    <div class="group">
+      <ui-text-area resize-h placeholder="resize-h"></ui-text-area>
+    </div>
+    <div class="group">
+      <ui-text-area resize placeholder="resize"></ui-text-area>
+    </div>
+    <div class="group">
+      <ui-text-area placeholder="fixed size"></ui-text-area>
+    </div>
+    <div class="fit"></div>
+  </div>
+</div>
+
+<div class="section">
   <h3>Size</h3>
   <div class="group">
     <ui-text-area style="width: 200px;" class="mini" placeholder="Mini..."></ui-text-area>
