add layout example

--- a/panel/loader-preview.tmpl
+++ b/panel/loader-preview.tmpl
@@ -1,3 +1,15 @@
+<style>
+  .item {
+    min-width: 100px;
+    min-height: 100px;
+
+    position: relative;
+
+    margin-bottom: 10px;
+    margin-right: 10px;
+  }
+</style>
+
 <div class="section">
   <h3>Standard</h3>
   <div class="item">
