--- a/panel/input-preview.tmpl
+++ b/panel/input-preview.tmpl
@@ -75,6 +75,14 @@
 </div>
 
 <div class="section">
+  <h3>Password</h3>
+  <div class="group">
+    <ui-input placeholder="Password..." password></ui-input>
+    <ui-input placeholder="Password..." value="Hello World" password></ui-input>
+  </div>
+</div>
+
+<div class="section">
   <h3>Readonly</h3>
   <div class="group">
     <ui-input placeholder="Search..." readonly></ui-input>
