--- a/panel/progress-preview.tmpl
+++ b/panel/progress-preview.tmpl
@@ -18,27 +18,35 @@
 <div class="section">
   <h3>Size</h3>
   <div class="group">
-    <ui-progress value="10" class="mini label">Mini</ui-progress> Mini
+    <ui-progress value="10" class="mini label">Mini</ui-progress>
+    <span>Mini</span>
   </div>
   <div class="group">
-    <ui-progress value="20" class="tiny label">Tiny</ui-progress> Tiny
+    <ui-progress value="20" class="tiny label">Tiny</ui-progress>
+    <span>Tiny</span>
   </div>
   <div class="group">
-    <ui-progress value="30" class="small label">Small</ui-progress> Small
+    <ui-progress value="30" class="small label">Small</ui-progress>
+    <span>Small</span>
   </div>
   <div class="group">
-    <ui-progress value="40" class="medium label">Medium</ui-progress> Medium
+    <ui-progress value="40" class="medium label">Medium</ui-progress>
+    <span>Medium</span>
   </div>
   <div class="group">
-    <ui-progress value="50" class="large label">Large</ui-progress> Large
+    <ui-progress value="50" class="large label">Large</ui-progress>
+    <span>Large</span>
   </div>
   <div class="group">
-    <ui-progress value="60" class="big label">Big</ui-progress> Big
+    <ui-progress value="60" class="big label">Big</ui-progress>
+    <span>Big</span>
   </div>
   <div class="group">
-    <ui-progress value="70" class="huge label">Huge</ui-progress> Huge
+    <ui-progress value="70" class="huge label">Huge</ui-progress>
+    <span>Huge</span>
   </div>
   <div class="group">
-    <ui-progress value="80" class="massive label">Massive</ui-progress> Massive
+    <ui-progress value="80" class="massive label">Massive</ui-progress>
+    <span>Massive</span>
   </div>
 </div>
