--- a/panel/num-input-preview.tmpl
+++ b/panel/num-input-preview.tmpl
@@ -42,11 +42,11 @@
   <h3>Precision</h3>
   <div class="group">
     <ui-num-input precision="2" value="123.45"></ui-num-input>
-    precision="2"
+    <span>precision="2"</span>
   </div>
   <div class="group">
     <ui-num-input precision="3" value="123.456" step="0.001"></ui-num-input>
-    precision="3" step="0.001"
+    <span>precision="3" step="0.001"</span>
   </div>
 </div>
 
@@ -54,11 +54,11 @@
   <h3>Integer</h3>
   <div class="group">
     <ui-num-input type="int" value="123"></ui-num-input>
-    type="int"
+    <span>type="int"</span>
   </div>
   <div class="group">
     <ui-num-input type="int" value="123" step="10"></ui-num-input>
-    type="int" step="10"
+    <span>type="int" step="10"</span>
   </div>
 </div>
 
@@ -66,35 +66,35 @@
   <h3>Min Max</h3>
   <div class="group">
     <ui-num-input value="0.1" min="0"></ui-num-input>
-    min="0"
+    <span>min="0"</span>
   </div>
   <div class="group">
     <ui-num-input value="0.2" max="1.0"></ui-num-input>
-    max="1.0"
+    <span>max="1.0"</span>
   </div>
   <div class="group">
     <ui-num-input value="0.3" min="0" max="1.0"></ui-num-input>
-    min="0" max="1.0"
+    <span>min="0" max="1.0"</span>
   </div>
   <div class="group">
     <ui-num-input value="0.4" min="0" max="1.0" step="10"></ui-num-input>
-    min="0" max="1.0" step="10"
+    <span>min="0" max="1.0" step="10"</span>
   </div>
   <div class="group">
     <ui-num-input type="int" value="5" min="0"></ui-num-input>
-    type="int" min="0"
+    <span>type="int" min="0"</span>
   </div>
   <div class="group">
     <ui-num-input type="int" value="6" max="10"></ui-num-input>
-    type="int" max="10"
+    <span>type="int" max="10"</span>
   </div>
   <div class="group">
     <ui-num-input type="int" value="7" min="0" max="10"></ui-num-input>
-    type="int" min="0" max="10"
+    <span>type="int" min="0" max="10"</span>
   </div>
   <div class="group">
     <ui-num-input value="8" min="1" max="10"></ui-num-input>
-    min="1" max="10"
+    <span>min="1" max="10"</span>
   </div>
 </div>
 
