--- a/panel/slider-preview.tmpl
+++ b/panel/slider-preview.tmpl
@@ -33,11 +33,11 @@
   <h3>Precision</h3>
   <div class="group">
     <ui-slider precision="2" value="0.5" min="0.0" max="1.0"></ui-slider>
-    precision="2" min="0.0" max="1.0"
+    <span>precision="2" min="0.0" max="1.0"</span>
   </div>
   <div class="group">
     <ui-slider precision="3" value="0.5" min="0.0" max="1.0"></ui-slider>
-    precision="3" min="0.0" max="1.0"
+    <span>precision="3" min="0.0" max="1.0"</span>
   </div>
 </div>
 
@@ -45,7 +45,7 @@
   <h3>Min Max</h3>
   <div class="group">
     <ui-slider value="0.0" min="-1.0" max="1.0"></ui-slider>
-    value="0.0" min="-1.0" max="1.0"
+    <span>value="0.0" min="-1.0" max="1.0"</span>
   </div>
 </div>
 
@@ -53,7 +53,7 @@
   <h3>Step</h3>
   <div class="group">
     <ui-slider value="0.0" min="-100.0" max="100.0" step="10.0"></ui-slider>
-    value="0.0" min="-100.0" max="100.0" step="10.0"
+    <span>value="0.0" min="-100.0" max="100.0" step="10.0"</span>
   </div>
 </div>
 
