add snap to step

--- a/panel/slider-preview.tmpl
+++ b/panel/slider-preview.tmpl
@@ -58,6 +58,14 @@
 </div>
 
 <div class="section">
+  <h3>Snap</h3>
+  <div class="group">
+    <ui-slider value="0.0" min="-100.0" max="100.0" step="50.0" snap></ui-slider>
+    <span>value="0.0" min="-100.0" max="100.0" step="50.0" snap</span>
+  </div>
+</div>
+
+<div class="section">
   <h3>Readonly</h3>
   <div style="position: relative;">
     <div class="group g-03">
