add nested example

--- a/panel/splitter-preview.tmpl
+++ b/panel/splitter-preview.tmpl
@@ -73,4 +73,24 @@
       </ui-splitter>
     </div>
   </div>
+
+  <div class="item">
+    <div class="wrapper fit">
+      <ui-splitter class="root fit">
+        <ui-splitter height="20" min-height="10">
+          <div class="box"></div>
+        </ui-splitter>
+
+        <ui-splitter height="20" min-height="10" row>
+          <ui-splitter width="200" min-width="100" min-height="20">
+            <div class="box"></div>
+          </ui-splitter>
+
+          <ui-splitter width="200" min-width="100">
+            <div class="box"></div>
+          </ui-splitter>
+        </ui-splitter>
+      </ui-splitter>
+    </div>
+  </div>
 </div>
